kubernetes/ingress/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: default-http-backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
