kubernetes/ingress/http-debug-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-debug-server
spec:
  selector:
    app: http-debug-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: http-debug-server
spec:
  replicas: 3
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: http-debug-server
    spec:
      containers:
      - name: http-debug-server
        image: cotoami/http-debug-server:latest
        ports:
        - containerPort: 3000
