kubernetes/ingress/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
spec:
  selector:
    app: nginx-ingress-controller
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
