kubernetes/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sticky-session-ingress
spec:
  rules:
  - host: debug.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-debug-server
          servicePort: 80
